force-app/main/default/objects/WebCart/fields/Approval_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Approval_Threshold__c</fullName>
    <label>Approval Threshold</label>
    <description>The threshold amount above which checkout requires approval</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>5000</defaultValue>
</CustomField>