force-app/main/default/objects/WebCart/fields/Selected_Approver__c.field-meta.xml
<CustomField>
    <fullName>Selected_Approver__c</fullName>
    <label>Selected Approver</label>
    <description>The user selected by the buyer to approve this cart checkout</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>ApprovedCarts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>